--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "moment": "^2.30.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.2.5",
+        "quill": "^1.3.7",
         "vee-validate": "^4.15.0",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
